# drop-shopping-agents

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  app.py  pyproject.toml
data/: orders.csv  supplier_catalog.csv  supplier_catalog_shopify.csv
src/: standalone_app.py
src/dropshoping/: crew.py  main.py
src/dropshoping/config/: agents.yaml  tasks.yaml
src/dropshoping/tools/: content_tools.py  custom_tool.py  data_tools.py  file_tools.py  mock_llm.py
