[project]
name = "dropshoping"
version = "0.1.0"
description = "dropshoping using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
dropshoping = "dropshoping.main:run"
run_crew = "dropshoping.main:run"
train = "dropshoping.main:train"
replay = "dropshoping.main:replay"
test = "dropshoping.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
